# typefree

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
docs/: api-key-setup.md
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  main.rs  providers.rs  settings.rs  text_injector.rs
src/components/dictionary/: DictionaryDialog.css  DictionaryDialog.tsx  DictionaryView.css  DictionaryView.tsx
src/components/history/: HistoryView.css  HistoryView.tsx
src/components/home/: HomeView.css  HomeView.tsx
src/components/inputs/: HotkeyRecorder.css  HotkeyRecorder.tsx
src/components/layout/: AppSidebar.css  AppSidebar.tsx
src/components/onboarding/: OnboardingView.css  OnboardingView.tsx
src/components/overlay/: OverlayShell.css  OverlayShell.tsx
src/components/prompts/: PromptMappingsView.css  PromptMappingsView.tsx
src/components/settings/: SettingsView.css  SettingsView.tsx
src/constants/: app.tsx
src/hooks/: useAppBootstrap.ts  useDictationSession.ts  useDictionaryManager.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json  ko.json  zh-TW.json
src/lib/: appHelpers.ts  tauri.ts
src/styles/: index.css  shared.css  tokens.css
