[package]
name = "typefree"
version = "0.1.0"
edition = "2024"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2.2.1", features = [] }

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
enigo = "0.6.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-autostart = "2.5.1"
tokio = { version = "1.48.0", features = ["sync"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.1"
